# raccoon-rs

./: .gitignore  ANALISIS_FFI.txt  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAM.txt  ARQUITECTURA_MODULOS_PROPUESTA.md  COMPREHENSIVE_TEST.rcc  Cargo.toml  DECORATOR_DEPENDENCIES.md  DECORATOR_FFI_GUIDE.md  DESIGN_TYPE_SYSTEM.md  EJEMPLOS_CODIGO_NUEVO.md  EXHAUSTIVE_TEST.rcc  FFI_ANALYSIS.md  FFI_IMPLEMENTATION_SUMMARY.md  FINDING_YOUR_ANSWER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLICIT_CONTEXT_DETAILS.md  IR_IMPLEMENTATION.md  IR_VM_FIXES_SUMMARY.md  IR_VM_IMPLEMENTATION_SUMMARY.md  LAZY_LOADING_ALTERNATIVA.md  NATIVE_FFI_ARCHITECTURE.md  NEW_RACCON_STDLIB.md  PHASE1_COMPLETE.md  PLUGIN_SYSTEM_MIGRATION.md  PRIMITIVES.md  PRIMITIVES_LAZY_LOADING.md  PROPERTY_ACCESS_TESTS_SUMMARY.md  PROXIMOS_PASOS.md  QUICK_REFERENCE.md  QUICK_START_REFACTOR.md  README_DECORADORES.md  REFACTORING_SUMMARY.md  RESUMEN_PLAN.txt  STACK_TRACE_ANALYSIS_INDEX.md  STACK_TRACE_QUICK_REFERENCE.md  STDLIB_ARCHITECTURE.md  (+22 more)
.cargo/: config.toml
.claude/: settings.local.json
examples/: async_test.rcc  stdlib_demo.rcc
raccoon_macros/: Cargo.toml
src/: error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  output_style.rs  parser.rs  semantic_analyzer.rs  symbol_table.rs  tokens.rs  type_checker.rs  type_inference.rs
stdlib/: README.md  array.rcc  console.rcc  core.rcc  decorators_demo.rcc  ffi.rcc  http.rcc  index.rcc  io.rcc  json.rcc  math.rcc  net.rcc  number.rcc  object.rcc  random.rcc  string.rcc  test_enum.rcc  (+1 more)
(+359 files in other folders)
