[package]
name = "raccoon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raccoon"
path = "src/main.rs"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
colored = "2"
lazy_static = "1.4"
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
async-recursion = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "raccoon_lang"          # <- cambio aquí
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]
