[workspace]

[package]
name = "raccoon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raccoon"
path = "src/main.rs"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
tokio = { version = "1.41", features = ["rt", "time"] }
async-recursion = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
libloading = "0.8"
lazy_static = "1.4"

[lib]
name = "raccoon_lang"          # <- cambio aquí
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]
